fixed z-index issues, everything is perfect now. added auto refresh on building change

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -2,6 +2,7 @@
 
 @import "~normalize.css";
 @import "~@blueprintjs/core/lib/css/blueprint.css";
+@import "~@blueprintjs/table/lib/css/table.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "~@blueprintjs/datetime/lib/css/blueprint-datetime.css";
 
@@ -13,7 +14,7 @@ html {
 	scrollbar-width: none;  /* Firefox */
 	background: var(--background) !important;
 }
-::-webkit-scrollbar { width: 4px; }
+::-webkit-scrollbar { width: 4px; height: 4px; }
 ::-webkit-scrollbar-thumb { background: var(--brand-color); }
 
 
@@ -88,6 +89,10 @@ body {
 .main-menu {
 	background: var(--background) !important;
 	padding-top: var(--header-height);
+}
+
+.main-menu-portal {
+	z-index: 18;
 }
 
 .custom-card {
